website-html progress 1.0

--- a/zip/greeno/greeno/index.html
+++ b/zip/greeno/greeno/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Greeno</title>
+      <title>Biotika-Tu cabello mas sano que nunk</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -54,11 +54,11 @@
                         <div class="limit-box">
                            <nav class="main-menu">
                               <ul class="menu-area-main">
-                                 <li class="active"> <a href="#">Home</a> </li>
-                                 <li> <a href="#about">About</a> </li>
-                                 <li><a href="#plant">Plant</a></li>
-                                 <li><a href="#gallery">Gallery</a></li>
-                                 <li><a href="#contact">Contact Us</a></li>
+                                 <li class="active"> <a href="#">Inicio</a> </li>
+                                 <li> <a href="#about">Acerca de</a> </li>
+                                 <li><a href="#shampoos">Shampoos</a></li>
+                                 <li><a href="#gallery">Galeria de fotos</a></li>
+                                 <li><a href="#contact">Contactanos</a></li>
                                  <li class="last"><a href="#"><img src="images/search_icon.png" alt="icon"/></a></li>
                               </ul>
                            </nav>
@@ -85,7 +85,7 @@
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-caption ">
                               <h1>Welcome To The <strong class="color">Nutrients Plants</strong></h1>
-                              <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
+                              <p>It is acontent of a page when ls that it has a motters, as opposed to using</p>
                               <a class="btn btn-lg btn-primary" href="#" role="button">About</a>
                               <a class="btn btn-lg btn-primary" href="#" role="button">Contact US</a>
                            </div>
@@ -103,7 +103,7 @@
                      <div class="row marginii">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-caption ">
-                              <h1>Welcome To The <strong class="color">Nutrients Plants</strong></h1>
+                              <h1>Bienvenido al <strong class="color">Shampoos de </strong></h1>
                               <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
                               <a class="btn btn-lg btn-primary" href="#" role="button">About</a>
                               <a class="btn btn-lg btn-primary" href="#" role="button">Contact US</a>
@@ -122,7 +122,7 @@
                      <div class="row marginii">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="carousel-caption ">
-                              <h1>Welcome To The <strong class="color">Nutrients Plants</strong></h1>
+                              <h1>Bienvenido al <strong class="color">Shampoos de </strong></h1>
                               <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using</p>
                               <a class="btn btn-lg btn-primary" href="#" role="button">About</a>
                               <a class="btn btn-lg btn-primary" href="#" role="button">Contact US</a>
@@ -150,7 +150,7 @@
             <div class="row">
                <div class="col-md-12 ">
                   <div class="titlepage">
-                     <h2>Our Wonderful plants</h2>
+                     <h2>Nuestros Fantasticos Shampoos</h2>
                      <span>looking at its layout. The point of using Lorem Ipsumletters, as opposed to usingl</span>
                   </div>
                </div>
@@ -161,7 +161,7 @@
                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                   <div class="plants-box">
                      <figure><img src="images/plant1.jpg" alt="img"/></figure>
-                     <h3> Floral Vibrant</h3>
+                     <h3> Frutos rojos</h3>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
                   </div>
                </div>
@@ -221,7 +221,7 @@
                      <div class="about-box">
                         <h2>50</h2>
                         <div class="white-bg">
-                           <span>Free Delivery</span> 
+                           <span>Delivery</span> 
                         </div>
                      </div>
                   </div>
@@ -229,7 +229,7 @@
                      <div class="about-box">
                         <h2>50</h2>
                         <div class="white-bg">
-                           <span>Store Locators</span> 
+                           <span>Ubicacion de sucursal</span> 
                         </div>
                      </div>
                   </div>
@@ -237,7 +237,7 @@
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                   <div class="about-box">
                      <div class="titlepage">
-                        <h2>About US</h2>
+                        <h2>Acerca de nosotros</h2>
                         <span>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web pageweb page</span> 
                         <div class="read-more">
                            <a  href="#">Read More</a>
@@ -400,8 +400,8 @@
                   <div class="col-md-12 ">
                      <div class="footer-box">
                         <div class="headinga">
-                           <h3>Address</h3>
-                           <span>Demo Store .New York  United States</span>
+                           <h3>Direccion</h3>
+                           <span>por ahi....</span>
                            <p>(+71 98765348)</p>
                         </div>
                         <ul class="location_icon">
@@ -412,11 +412,11 @@
                         </ul>
                         <div class="menu-bottom">
                            <ul class="link">
-                              <li> <a href="#">Home</a></li>
-                              <li> <a href="#">About</a></li>
-                              <li> <a href="#"> Plant</a></li>
-                              <li> <a href="#">Gallery</a></li>
-                              <li> <a href="#"> Contact us</a></li>
+                              <li> <a href="#">Inicio</a></li>
+                              <li> <a href="#">Acerca De</a></li>
+                              <li> <a href="#"> Shampoos</a></li>
+                              <li> <a href="#">Catalogo</a></li>
+                              <li> <a href="#"> Contactanos</a></li>
                            </ul>
                         </div>
                      </div>
@@ -425,7 +425,7 @@
             </div>
             <div class="copyright">
                <div class="container">
-                  <p>Copyright 2019 All Rights Reserved Design By  <a href="https://html.design/">Free Html Templates</a></p>
+                  <p>Copyright 2021 All Rights Reserved</p>
                </div>
             </div>
          </div>
