--- a/zip/greeno/greeno/index.html
+++ b/zip/greeno/greeno/index.html
@@ -423,9 +423,9 @@
                   </div>
                </div>
             </div>
-            <div class="copyright">
+            <div class="copyright ©">
                <div class="container">
-                  <p>Copyright 2021 All Rights Reserved</p>
+                  <p>Copyright © 2021 All Rights Reserved</p>
                </div>
             </div>
          </div>
